# DLScanner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/DLScanner/: gen_scanner.py
src/DLScanner/hep/MicrOMEGAs/: ML.py  __init__.py  input_m.txt  micromegas_ML.py  utils_megas.py  vegas_S.py
src/DLScanner/hep/SPheno/: ML.py  SPheno.py  SPheno_trial.py  Spheno.py  Spheno_trail_regressor.py  __init__.py  utils.py
src/DLScanner/samplers/: ML.py
src/DLScanner/utilities/: plot.py  try_imports.py  vegas.py
src/dlscanner/: gen_scanner.py
src/dlscanner/hep/SPheno/: Spheno.py  Spheno_trail.py  utils.py
src/dlscanner/samplers/ML/: ML.py
src/dlscanner/utilities/: plot.py  vegas.py
tests/: gen_scanner_test.py  sampler_attributes.py  user_model.py  vegas_test.py
tests/examples/: README.md
tests/examples/2508_13912/: LZ_2024+2022.csv  Makefile  README.md  me_calculate_xsec  mg_create_output  my_classifier.py  my_setup.py  pyNMSSMTools.py  run_scan.py  spectrum2paramcard.py
