[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlscanner"
version = "0.0.1"
authors = [
  { name="Ahmed Hammad"},
  { name="Raymundo Ramos"},
]
description = "Scanning parameter spaces using machine learning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26",
    "vegas>=6.1",
]

[project.urls]
Homepage = "https://github.com/raalraan/dlscanner"
Issues = "https://github.com/raalraan/issues"
