[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "DLScanner"
version = "1.0.0"
maintainers = [
  { name="Ahmed Hammad"},
  { name="Raymundo Ramos"},
]
description = "Scanning parameter spaces using deep learning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.5,<2.0.0",
    "vegas>=6.1",
    "matplotlib",
    "scikit-learn",
]

[project.urls]
Homepage = "https://github.com/raalraan/DLScanner"
Issues = "https://github.com/raalraan/DLScanner/issues"
